some renovation things

--- a/Seapal_play/app/views/map.scala.html
+++ b/Seapal_play/app/views/map.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(header_app: Html)(header_app_map: Html)(navigation: Html)(navigation_app: Html)(map_content: Html)(weather_chart: Html)
+@(header_app: Html, header_app_map: Html, navigation: Html, navigation_app: Html, map_content: Html, weather_chart: Html, header: Html = views.html._include.header.render())
 
 <!DOCTYPE html>
 
