--- a/seapal_play2.1/app/views/map.scala.html
+++ b/seapal_play2.1/app/views/map.scala.html
@@ -1,4 +1,4 @@
-@(header_app: Html, navigation: Html, navigation_app: Html, header: Html = views.html._include.header.render())
+@(header_app: Html, header_app_map: Html, navigation: Html, navigation_app: Html, map_content: Html, weather_chart: Html, header: Html = views.html._include.header.render())
 
 <!DOCTYPE html>
 
@@ -10,6 +10,7 @@
         
         <!-- Header App -->
         @header_app
+        @header_app_map
         
     </head>
     <body onload="initialize();">
@@ -23,60 +24,20 @@
     		<!-- Navigation -->
     		@navigation_app
 
-			<!-- Route Menu -->
-			<div id="routeMenuContainer">
-		    	<div id="routeMenu" class="well">
-		    		<h4>Routen Menü</h4>
-		        	<div class="btn-group btn-group-vertical">
-		                <input type="button" class="btn" value="l&ouml;schen" id="deleteRouteButton" class="routeButton" onclick="javascript: deleteRoute()" />
-		                <input type="button" class="btn" value="speichern" id="saveRouteButton" class="routeButton" onclick="javascript: saveRoute()" />
-		                <input type="button" class="btn" value="beenden" id="stopRouteButton" class="routeButton" onclick="javascript: stopRouteMode()" />
-		            </div>
-		        	<br><br>
-		            <div id="route_distance">Routen-L&auml;nge: <span id="route_distance_number"></span> m</div>
-		        </div>
-		    </div>
-		    
-		    <!-- Distance Menu -->
-		    <div id="distanceToolContainer">
-		        <div id="distanceToolMenu" class="well">
-		        	<h4>Distanztool</h4>
-		        	<input type="button" class="btn" value="beenden" id="stopDistanceToolButton" class="distanceToolbutton" onclick="javascript: stopDistanceToolMode()" />
-		        	<br><br>
-		        	<div id="distanceTool_distance">Distanz: <span id="distanceTool_number"></span> m</div>
-		        </div>
-		    </div>
-		    
-		     <!-- Navigation Menu -->
-		    <div id="navigationContainer">
-		        <div id="navigationMenu" class="well">
-		        	<h4>Navigation</h4>
-		        	<input type="button" class="btn" value="beenden" id="stopNavigationButton" class="distanceToolbutton" onclick="javascript: stopNavigationMode()" />
-		        	<br><br>
-		        	<div id="navigation_distance">Distanz: <span id="navigation_number"></span> m</div>
-		        </div>
-		    </div>
-		    
-		    <!-- Current Position -->
-		    <div id="followCurrentPositionContainer">
-		        <div id="followCurrentPosition_button" class="well">
-		            <input type="button" class="btn" value="Eigener Position folgen" id="followCurrentPositionbutton" onclick="javascript: toggleFollowCurrentPosition()" />
-		        </div>
-		    </div>
-		    
-		    <!-- Map -->
-		    <div id="appWrapper">
-		        <div id="map_canvas"></div>
-		    </div>
-		
-		    <!-- Context Menus -->
-		    <div id="temporaryMarkerContextMenu"></div>
-		    <div id="fixedMarkerContextMenu"></div>
-		    <div id="routeContextMenu_active"></div>
-		    <div id="routeContextMenu_inactive"></div>	
-			<div id="chat" align="center">
-		        <div id="chat-area" style="height:200px; width:200px; background-color: white; overflow: auto;"></div>
+			<div class="row-fluid">
+			
+				<div id="mapDiv" class="span8">
+					<!-- Map -->
+					@map_content
+				</div>
+				
+				<div id="chartDiv" class="span4">
+					<!-- Weather Charts -->
+					@weather_chart
+				</div>
+
 			</div>
+			
 		</div><!-- Container -->
 	</body>
 </html>
