--- a/Seapal_play/app/views/boatinfo.scala.html
+++ b/Seapal_play/app/views/boatinfo.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(header_app_trip: Html)(navigation: Html)(navigation_app: Html)(logbook_boatinfo_menu: Html)(logbook_trip_menu: Html)(logbook_boatinfo: Html)(logbook_tripinfo: Html)(logbook_weatherinfo: Html)(simple_map: Html)
+@(header_app_trip: Html, navigation: Html, navigation_app: Html, logbook_boatinfo_menu: Html, logbook_trip_menu: Html, logbook_boatinfo: Html, logbook_tripinfo: Html, logbook_weatherinfo: Html, simple_map: Html, header: Html = views.html._include.header.render())
 
 <!DOCTYPE html>
 
