--- a/Seapal_play/app/views/trip.scala.html
+++ b/Seapal_play/app/views/trip.scala.html
@@ -1,4 +1,4 @@
-@(header: Html)(header_app_route: Html)(navigation: Html)(navigation_app: Html)(route_menu: Html)(route_map: Html)
+@(header_app_route: Html, navigation: Html, navigation_app: Html, route_menu: Html, route_map: Html, header: Html = views.html._include.header.render())
 
 <!DOCTYPE html>
 
