--- a/seapal_play2.1/app/views/trip.scala.html
+++ b/seapal_play2.1/app/views/trip.scala.html
@@ -1,4 +1,4 @@
-@(navigation: Html, navigation_app: Html, data: String, header: Html = views.html._include.header.render())
+@(header_app_route: Html, navigation: Html, navigation_app: Html, route_menu: Html, route_map: Html, header: Html = views.html._include.header.render())
 
 <!DOCTYPE html>
 
@@ -7,9 +7,10 @@
     
     	<!-- Header -->
         @header
+        @header_app_route
         
     </head>
-    <body>
+    <body onload="initialize();">
     
     	<!-- Navigation -->
     	@navigation
@@ -20,89 +21,15 @@
 	    	<!-- Navigation -->
 	    	@navigation_app
 
+	    	<!-- route selection menu -->
+	    	@route_menu
+
 			<!-- Content -->
 			<div id="appWrapper" align="center">
-	            <br />
-	            <h2>Routen</h2>
-	            <br />
-	            <div class="container-fluid">
-	            	<form class="form-horizontal"> 
-		            	<div class="row well" style="margin-left: 15%;">
-		            		<div class="span4" align="center">	            		
-			            		<div class="control-group">
-			            			<label class="control-label">Titel</label>
-			            			<input type="text" name="titel" id="titel"/>
-			            		</div>
-			            		<div class="control-group">
-			            			<label class="control-label">Von</label>
-			            			<input type="text" name="von" id="von"/>
-			                    </div>
-			                    <div class="control-group">
-			            			<label class="control-label">Nach</label>
-			            			<input type="text" name="von" id="nach"/>
-			                    </div>        
-		            		</div>
-		            		<div class="span4">
-		            			<div class="control-group">
-			            			<label class="control-label">Start</label>
-			            			<input type="text" name="titel" id="tstart"/>
-			            		</div>
-			            		<div class="control-group">
-			            			<label class="control-label">Ende</label>
-			            			<input type="text" name="von" id="tende"/>
-			                    </div>
-			                    <div class="control-group">
-			            			<label class="control-label">Dauer</label>
-			            			<input type="text" name="von" id="tdauer"/>
-			                    </div>
-		            		</div>
-		            		<div class="span4">
-		            			<div class="control-group">
-			            			<label class="control-label">Skipper</label>
-			            			<input type="text" name="von" id="skipper"/>
-			                    </div>
-			                    <div class="control-group">
-			            			<label class="control-label">Crew</label>
-			            			<textarea cols="20" rows="3" id="crew"></textarea>
-			                    </div>			                            
-		            		</div>
-		            		<div class="span4">
-		            			<div class="control-group">
-			            			<label class="control-label">Motor</label>
-			            			<input type="text" name="motor" id="motor"/>
-			                    </div>	
-			                    <div class="control-group">
-			            			<label class="control-label"></label>
-			            			<span>Tank gefüllt<input type="checkbox" value="false" name="tank" id="tank" style="margin-left:20px; margin-top:-5px;"/></span>
-			                    </div>			                            
-		            		</div>
-		            	</div>      	 
-		            	<div class="control-group">
-			            	<input type="reset" class="btn" id="delete" value="L&ouml;schen" class="button"/>
-			                <input type="submit" class="btn" id="save" name="submit" value="Speichern" class="button"/>
-			            </div>  
-		            </form>
-	            </div>
-	            <br />
-	            <br />
-	            <div class="appTableDiv" id="appRoutelist" align="center">
-	                <table class="appTable table table-hover" id="tableLinesClickable" cellspacing="0px" cellpadding="5px">
-	                    <thead>
-	                        <tr>
-	                            <th>Titel</th>
-	                            <th>Skipper</th>
-	                            <th>Start</th>
-	                            <th>Ende</th>
-	                            <th>Dauer</th>
-	                            <th>Motor</th>     
-	                            <th></th>
-	                        </tr>
-	                    </thead>
-	                    <tbody id="entries">
-	                        @Html(data)
-	                    </tbody>
-	                </table>
-	            </div>    
+				<input class="btn" type="button" id="load_route" value="Route laden" class="button" />
+
+	            <!-- simple map to show trip -->
+				@route_map
 	        </div><!-- Content --> 
 		</div><!-- Container -->
 		
@@ -119,9 +46,6 @@
 				<a href="#" class="btn" data-dismiss="modal"><i class="icon-ok"></i> ok</a>
 			</div>
 		</div>
-		
-		<!-- Additional Scripts -->
-		<script src="@routes.Assets.at("javascripts/app/ajax/trip.js")" type="text/javascript"></script>
 		
     </body>
 </html>
