--- a/seapal_play2.1/app/views/_include/header_app_map.scala.html
+++ b/seapal_play2.1/app/views/_include/header_app_map.scala.html
@@ -7,3 +7,4 @@
         
 <script src="@routes.Assets.at("javascripts/app/map/map_weather_data.js")" type="text/javascript"></script>
 <script src="@routes.Assets.at("javascripts/app/map/map_weather_chart.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("javascripts/app/map/map_weather_overlay.js")" type="text/javascript"></script>
