--- a/seapal_play2.1/app/views/_include/header_app_logbook.scala.html
+++ b/seapal_play2.1/app/views/_include/header_app_logbook.scala.html
@@ -16,3 +16,4 @@
 <script src="@routes.Assets.at("javascripts/app/logbook/logbook_print_trip.js")" type="text/javascript"></script>
 <script src="@routes.Assets.at("javascripts/app/logbook/logbook_boat_data.js")" type="text/javascript"></script>
 <script src="@routes.Assets.at("javascripts/app/logbook/logbook_weather_chart.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("javascripts/app/ajax/logbook.js")" type="text/javascript"></script>
