looks a lot more nicer now…but still not perfect :/

--- a/seapal_play2.1/app/views/_include/header_app_logbook.scala.html
+++ b/seapal_play2.1/app/views/_include/header_app_logbook.scala.html
@@ -1,7 +1,6 @@
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/logbook_selection_menu.css")">
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/logbook_selection_menu.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/weather_chart.css")">
-<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/simple_map.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/logbook.css")">
         
 <script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/highcharts-more.js"></script>
