--- a/seapal_play2.1/app/views/_include/logbookInc/simple_map.scala.html
+++ b/seapal_play2.1/app/views/_include/logbookInc/simple_map.scala.html
@@ -1,4 +1,4 @@
 <!-- Map -->
-<div class="container-fluid" style="visibility: hidden">
-		<div class="row well" style="margin-left: 15%;" id="map_canvas"></div>
+<div class="container-fluid" id="mapContainer" style="visibility: hidden">
+		<div id="map_canvas"></div>
 </div>
