--- a/seapal_play2.1/app/views/_include/mapInc/weather_chart.scala.html
+++ b/seapal_play2.1/app/views/_include/mapInc/weather_chart.scala.html
@@ -4,21 +4,13 @@
 
 		<div class="row-fluid">
 			<div class="span6">
-				<div class="row-fluid">
-					<div class="span9">
-						<h4>Windrichtung/</h4><h4>Windgeschwindigkeit</h4>
-						<div class="span9" id="windContainer" style="width: 280px; height: 280px; margin: 0 auto"></div>
-					</div>
-				</div>
+				<h4>Windrichtung/</h4><h4>Windgeschwindigkeit</h4>
+				<div id="windContainer"></div>
 			</div>
 	
 			<div class="span6">
-				<div class="row-fluid">
-					<div class="span9">
-						<h4>Wellenrichtung/</h4><h4>Wellenh&ouml;he</h4>
-						<div class="span9" id="waveContainer" style="width: 280px; height: 280px; margin: 0 auto"></div>
-					</div>
-				</div>
+				<h4>Wellenrichtung/</h4><h4>Wellenh&ouml;he</h4>
+				<div id="waveContainer"></div>
 			</div>
 		</div>
 			
@@ -29,30 +21,18 @@
 		<div class="row-fluid">
 		
 			<div class="span4">
-				<div class="row-fluid">
-					<div class="span9">
-						<h4>Luftdruck</h4>
-						<div class="span9" id="pressureContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
-					</div>
-				</div>
+				<h4>Luftdruck</h4>
+				<div id="pressureContainer"></div>
 			</div>	
 			
 			<div class="span4">
-				<div class="row-fluid">
-					<div class="span9">
-						<h4>Bew&ouml;lkung</h4>
-						<div class="span9" id="cloudContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
-					</div>
-				</div>
+				<h4>Bew&ouml;lkung</h4>
+				<div id="cloudContainer"></div>
 			</div>
 			
 			<div class="span4">
-				<div class="row-fluid">
-					<div class="span9">
-						<h4>Temperatur</h4>
-						<div class="span9" id="tempContainer" style="width: 200px; height: 200px; margin: 0 auto"></div>
-					</div>
-				</div>
+				<h4>Temperatur</h4>
+				<div id="tempContainer"></div>
 			</div>
 			
 		</div>
