lokks quite good now :-)

--- a/seapal_play2.1/app/views/_include/logbookInc/logbook_tripinfo.scala.html
+++ b/seapal_play2.1/app/views/_include/logbookInc/logbook_tripinfo.scala.html
@@ -1,12 +1,13 @@
 <div class="container-fluid" id="trip_info_table" style="display: none">
 	<div class="accordion-group">
-    	<div class="accordion-heading">
-      		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-				<h2>Track Informationen</h2>
+		<div class="accordion-heading">
+			<a class="accordion-toggle" data-toggle="collapse"
+				data-parent="#accordion2" href="#collapseTwo">
+				<h2>Trip Informationen</h2>
 			</a>
-    	</div>
-	    <div id="collapseTwo" class="accordion-body collapse">
-	    	<div class="accordion-inner">
+		</div>
+		<div id="collapseTwo" class="accordion-body collapse">
+			<div class="accordion-inner">
 				<form class="form-horizontal">
 					<div class="row well">
 						<div class="span4" align="center">
@@ -44,7 +45,7 @@
 							</div>
 							<div class="control-group">
 								<label class="control-label">Crew</label>
-								<textarea cols="20" rows="3" id="crew" class="input-medium" ></textarea>
+								<textarea cols="20" rows="3" id="crew" class="input-medium"></textarea>
 							</div>
 						</div>
 						<div class="span4">
@@ -55,14 +56,15 @@
 							<div class="control-group">
 								<label class="control-label"></label> <span>Tank
 									gef&uuml;llt<input type="checkbox" value="false" name="tank"
-									id="tank" style="margin-left: 20px; margin-top: -5px;" class="input-medium" />
+									id="tank" style="margin-left: 20px; margin-top: -5px;"
+									class="input-medium" />
 								</span>
 							</div>
 						</div>
 					</div>
 				</form>
 			</div>
-	    </div>
+		</div>
 	</div>
 </div>
 
