--- a/seapal_play2.1/app/views/_include/logbookInc/logbook_boatinfo.scala.html
+++ b/seapal_play2.1/app/views/_include/logbookInc/logbook_boatinfo.scala.html
@@ -1,135 +1,137 @@
 <div class="container-fluid" id="boat_info_table" style="display: none">
-	<div class="accordion" id="accordion2">
-		<div class="accordion-group">
-	    	<div class="accordion-heading">
-	      		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-					<h2>Boot Informationen</h2>
-				</a>
-    		</div>
-	    	<div id="collapseOne" class="accordion-body collapse in">
-	      		<div class="accordion-inner">
-					<br />
-					<form class="form-horizontal">
-						<div class="row well">
-							<div class="span4" align="center">
-								<div class="control-group">
-									<label class="control-label">Bootname</label> <input
-										class="input-medium" type="text" name="bootname" id="bootname" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Baujahr</label> <input
-										class="input-medium" type="text" name="baujahr" id="baujahr" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Konstrukteur</label> <input
-										class="input-medium" type="text" name="konstrukteur"
-										id="konstrukteur" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Registernummer</label> <input
-										class="input-medium" type="text" name="registernummer"
-										id="registernummer" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Eigner</label> <input
-										class="input-medium" type="text" name="eigner" id="eigner" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Yachtclub</label> <input
-										class="input-medium" type="text" name="yachtclub" id="yachtclub" />
-								</div>
+	<div class="accordion-group">
+		<div class="accordion-heading" id="boatAccordionHeading">
+			<a class="accordion-toggle" data-toggle="collapse"
+				data-parent="#accordion2" href="#collapseOne">
+				<h2>Boot Informationen</h2>
+			</a>
+		</div>
+		<div id="collapseOne" class="accordion-body collapse in">
+			<div class="accordion-inner">
+				<form class="form-horizontal">
+					<div class="row well">
+						<div class="span4" align="center">
+							<div class="control-group">
+								<label class="control-label">Bootname</label> <input
+									class="input-medium" type="text" name="bootname" id="bootname" />
 							</div>
-							<div class="span4">
-								<div class="control-group">
-									<label class="control-label">Typ</label> <input
-										class="input-medium" type="text" name="typ" id="typ" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Rig-Art</label> <input
-										class="input-medium" type="text" name="rigart" id="rigart" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Rufzeichen</label> <input
-										class="input-medium" type="text" name="rufzeichen" id="rufzeichen" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Segelzeichen</label> <input
-										class="input-medium" type="text" name="segelzeichen"
-										id="segelzeichen" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Versicherung</label> <input
-										class="input-medium" type="text" name="versicherung"
-										id="versicherung" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Heimathafen</label> <input
-										class="input-medium" type="text" name="heimathafen"
-										id="heimathafen" />
-								</div>
+							<div class="control-group">
+								<label class="control-label">Baujahr</label> <input
+									class="input-medium" type="text" name="baujahr" id="baujahr" />
 							</div>
-							<div class="span4">
-								<div class="control-group">
-									<label class="control-label">Breite</label> <input
-										class="input-medium" type="text" name="breite" id="breite" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">L&auml;nge</label> <input
-										class="input-medium" type="text" name="laenge" id="laenge" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Motor</label> <input
-										class="input-medium" type="text" name="motor" id="motor" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Tankgr&ouml;&szlig;e</label> <input
-										class="input-medium" type="text" name="tankgroesse"
-										id="tankgroesse" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Wassertankgr&ouml;&szlig;e</label> <input
-										class="input-medium" type="text" name="wassertankgroesse"
-										id="wassertankgroesse" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Abwassertankgr&ouml;&szlig;e</label> <input
-										class="input-medium" type="text" name="abwassertankgroesse"
-										id="abwassertankgroesse" />
-								</div>
-				
+							<div class="control-group">
+								<label class="control-label">Konstrukteur</label> <input
+									class="input-medium" type="text" name="konstrukteur"
+									id="konstrukteur" />
 							</div>
-							<div class="span4">
-								<div class="control-group">
-									<label class="control-label">Tiefgang</label> <input
-										class="input-medium" type="text" name="tiefgang" id="tiefgang" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Masth&ouml;he</label> <input
-										class="input-medium" type="text" name="masthoehe" id="masthoehe" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Spigr&ouml;&szlig;e</label> <input
-										class="input-medium" type="text" name="spigroesse" id="spigroesse" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Verdr&auml;ngung</label> <input
-										class="input-medium" type="text" name="verdraengung"
-										id="verdraengung" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Genuagr&ouml;&szlig;e</label> <input
-										class="input-medium" type="text" name="genuagroesse"
-										id="genuagroesse" />
-								</div>
-								<div class="control-group">
-									<label class="control-label">Gro&szlig;segelgr&ouml;&szlig;e</label>
-									<input class="input-medium" type="text" name="grosssegelgroesse"
-										id="grosssegelgroesse" />
-								</div>
+							<div class="control-group">
+								<label class="control-label">Registernummer</label> <input
+									class="input-medium" type="text" name="registernummer"
+									id="registernummer" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Eigner</label> <input
+									class="input-medium" type="text" name="eigner" id="eigner" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Yachtclub</label> <input
+									class="input-medium" type="text" name="yachtclub"
+									id="yachtclub" />
 							</div>
 						</div>
-					</form>
-				</div>
+						<div class="span4">
+							<div class="control-group">
+								<label class="control-label">Typ</label> <input
+									class="input-medium" type="text" name="typ" id="typ" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Rig-Art</label> <input
+									class="input-medium" type="text" name="rigart" id="rigart" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Rufzeichen</label> <input
+									class="input-medium" type="text" name="rufzeichen"
+									id="rufzeichen" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Segelzeichen</label> <input
+									class="input-medium" type="text" name="segelzeichen"
+									id="segelzeichen" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Versicherung</label> <input
+									class="input-medium" type="text" name="versicherung"
+									id="versicherung" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Heimathafen</label> <input
+									class="input-medium" type="text" name="heimathafen"
+									id="heimathafen" />
+							</div>
+						</div>
+						<div class="span4">
+							<div class="control-group">
+								<label class="control-label">Breite</label> <input
+									class="input-medium" type="text" name="breite" id="breite" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">L&auml;nge</label> <input
+									class="input-medium" type="text" name="laenge" id="laenge" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Motor</label> <input
+									class="input-medium" type="text" name="motor" id="motor" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Tankgr&ouml;&szlig;e</label> <input
+									class="input-medium" type="text" name="tankgroesse"
+									id="tankgroesse" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Wassertankgr&ouml;&szlig;e</label>
+								<input class="input-medium" type="text" name="wassertankgroesse"
+									id="wassertankgroesse" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Abwassertankgr&ouml;&szlig;e</label>
+								<input class="input-medium" type="text"
+									name="abwassertankgroesse" id="abwassertankgroesse" />
+							</div>
+
+						</div>
+						<div class="span4">
+							<div class="control-group">
+								<label class="control-label">Tiefgang</label> <input
+									class="input-medium" type="text" name="tiefgang" id="tiefgang" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Masth&ouml;he</label> <input
+									class="input-medium" type="text" name="masthoehe"
+									id="masthoehe" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Spigr&ouml;&szlig;e</label> <input
+									class="input-medium" type="text" name="spigroesse"
+									id="spigroesse" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Verdr&auml;ngung</label> <input
+									class="input-medium" type="text" name="verdraengung"
+									id="verdraengung" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Genuagr&ouml;&szlig;e</label> <input
+									class="input-medium" type="text" name="genuagroesse"
+									id="genuagroesse" />
+							</div>
+							<div class="control-group">
+								<label class="control-label">Gro&szlig;segelgr&ouml;&szlig;e</label>
+								<input class="input-medium" type="text" name="grosssegelgroesse"
+									id="grosssegelgroesse" />
+							</div>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
