logbook works quite good; store ajax calls are missing

--- a/seapal_play2.1/app/views/_include/logbookInc/logbook_boatinfo.scala.html
+++ b/seapal_play2.1/app/views/_include/logbookInc/logbook_boatinfo.scala.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="boat_info_table" style="display: none">
+<div id="boat_info_table" style="display: none">
 	<div class="accordion-group">
 		<div class="accordion-heading" id="boatAccordionHeading">
 			<a class="accordion-toggle" data-toggle="collapse"
@@ -10,7 +10,7 @@
 			<div class="accordion-inner">
 				<form class="form-horizontal">
 					<div class="row well">
-						<div class="span4" align="center">
+						<div class="span3" align="center">
 							<div class="control-group">
 								<label class="control-label">Bootname</label> <input
 									class="input-medium" type="text" name="bootname" id="bootname" />
@@ -39,7 +39,7 @@
 									id="yachtclub" />
 							</div>
 						</div>
-						<div class="span4">
+						<div class="span3">
 							<div class="control-group">
 								<label class="control-label">Typ</label> <input
 									class="input-medium" type="text" name="typ" id="typ" />
@@ -69,7 +69,7 @@
 									id="heimathafen" />
 							</div>
 						</div>
-						<div class="span4">
+						<div class="span3">
 							<div class="control-group">
 								<label class="control-label">Breite</label> <input
 									class="input-medium" type="text" name="breite" id="breite" />
@@ -99,7 +99,7 @@
 							</div>
 
 						</div>
-						<div class="span4">
+						<div class="span3">
 							<div class="control-group">
 								<label class="control-label">Tiefgang</label> <input
 									class="input-medium" type="text" name="tiefgang" id="tiefgang" />
