--- a/seapal_play2.1/app/views/_include/logbookInc/logbook_tripinfo.scala.html
+++ b/seapal_play2.1/app/views/_include/logbookInc/logbook_tripinfo.scala.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="trip_info_table" style="display: none">
+<div id="trip_info_table" style="display: none">
 	<div class="accordion-group">
 		<div class="accordion-heading">
 			<a class="accordion-toggle" data-toggle="collapse"
@@ -10,7 +10,7 @@
 			<div class="accordion-inner">
 				<form class="form-horizontal">
 					<div class="row well">
-						<div class="span4" align="center">
+						<div class="span3" align="center">
 							<div class="control-group">
 								<label class="control-label">Titel</label> <input type="text"
 									class="input-medium" name="titel" id="titel" />
@@ -24,7 +24,7 @@
 									class="input-medium" name="von" id="nach" />
 							</div>
 						</div>
-						<div class="span4">
+						<div class="span3">
 							<div class="control-group">
 								<label class="control-label">Start</label> <input type="text"
 									class="input-medium" name="titel" id="tstart" />
@@ -38,7 +38,7 @@
 									class="input-medium" name="von" id="tdauer" />
 							</div>
 						</div>
-						<div class="span4">
+						<div class="span3">
 							<div class="control-group">
 								<label class="control-label">Skipper</label> <input type="text"
 									class="input-medium" name="von" id="skipper" />
@@ -48,7 +48,7 @@
 								<textarea cols="20" rows="3" id="crew" class="input-medium"></textarea>
 							</div>
 						</div>
-						<div class="span4">
+						<div class="span3">
 							<div class="control-group">
 								<label class="control-label">Motor</label> <input type="text"
 									name="motor" id="motor" class="input-medium" />
