--- a/seapal_play2.1/app/views/_include/logbookInc/logbook_weatherinfo.scala.html
+++ b/seapal_play2.1/app/views/_include/logbookInc/logbook_weatherinfo.scala.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" id="weather_info_table"
+<div id="weather_info_table"
 	style="display: none">
 	<div class="accordion-group">
 		<div class="accordion-heading">
