--- a/seapal_play2.1/app/views/route.scala.html
+++ b/seapal_play2.1/app/views/route.scala.html
@@ -26,10 +26,16 @@
 
 			<!-- Content -->
 			<div id="appWrapper" align="center">
-				<input class="btn" type="button" id="load_route" value="Route laden" class="button" />
-
-	            <!-- simple map to show trip -->
-				@route_map
+				<div class="row-fluid">
+					<div class="span1">
+						<input class="btn" type="button" id="load_route" value="Route laden" class="button" />
+					</div>
+				
+					<div class="span11">
+	            		<!-- simple map to show trip -->
+						@route_map
+					</div>
+				</div>
 	        </div><!-- Content --> 
 		</div><!-- Container -->
 		
