--- a/seapal_play2.1/public/stylesheets/app/logbook.css
+++ b/seapal_play2.1/public/stylesheets/app/logbook.css
@@ -3,10 +3,6 @@
     width: 100%;
 }
 
-#mapContainer {
-	padding-left: 15%;
-}
-
 #chartContainer {
 	width: 70%;
 }
@@ -44,23 +40,11 @@
 	margin-top: 30px;
 }
 
-#boat_info_table {
-	padding-left: 15%;
-}
-
-#trip_info_table {
-	padding-left: 15%;
-}
-
-#load_trip {
+#sideButtons {
 	float: left;
 }
 
 #load_boat_info {
 	float: left;
 	margin-top: 20px;
-}
-
-#weather_info_table {
-	padding-left: 15%;
 }
