uups, should not be directly on develop

--- a/seapal_play2.1/app/views/_include/mapInc/map_content.scala.html
+++ b/seapal_play2.1/app/views/_include/mapInc/map_content.scala.html
@@ -48,7 +48,7 @@
 </div>
 
 <!-- Current Position -->
-<div id="followCurrentPositionContainer">
+<div id="followCurrentPositionContainer" style="visibility: hidden">
 	<div id="followCurrentPosition_button" class="well">
 		<input type="button" class="btn" value="Eigener Position folgen"
 			id="followCurrentPositionbutton"
