--- a/seapal_play2.1/app/views/_include/mapInc/weather_chart.scala.html
+++ b/seapal_play2.1/app/views/_include/mapInc/weather_chart.scala.html
@@ -4,12 +4,12 @@
 
 		<div class="row-fluid">
 			<div class="span6">
-				<h4>Windrichtung/</h4><h4>Windgeschwindigkeit</h4>
+				<h4 id="windHeading">Windrichtung/</h4><h4 id="windHeading2">Windgeschwindigkeit</h4>
 				<div id="windContainer"></div>
 			</div>
 	
 			<div class="span6">
-				<h4>Wellenrichtung/</h4><h4>Wellenh&ouml;he</h4>
+				<h4 id="waveHeading">Wellenrichtung/</h4><h4 id="waveHeading2">Wellenh&ouml;he</h4>
 				<div id="waveContainer"></div>
 			</div>
 		</div>
@@ -21,17 +21,17 @@
 		<div class="row-fluid">
 		
 			<div class="span4">
-				<h4>Luftdruck</h4>
+				<h4 id="pressureHeading">Luftdruck</h4>
 				<div id="pressureContainer"></div>
 			</div>	
 			
 			<div class="span4">
-				<h4>Bew&ouml;lkung</h4>
+				<h4 id="cloudHeading">Bew&ouml;lkung</h4>
 				<div id="cloudContainer"></div>
 			</div>
 			
 			<div class="span4">
-				<h4>Temperatur</h4>
+				<h4 id="temperatureHeading">Temperatur</h4>
 				<div id="tempContainer"></div>
 			</div>
 			
