--- a/seapal_play2.1/app/views/logbook.scala.html
+++ b/seapal_play2.1/app/views/logbook.scala.html
@@ -31,10 +31,9 @@
 		<div id="appWrapper" align="center">
 			<div class="row-fluid">
 				<div class="span1">
-					<input class="btn" type="button" id="load_trip" value="Trip laden" class="button"/>
+					<input class="btn" type="button" id="load_trip" value="Trip" class="button"/>
 					
-					<input class="btn" type="button" id="load_boat_info" value="Boot laden"
-						class="button" style="display: none" />
+					<input class="btn" type="button" id="load_boat" value="Boot" class="button" style="display: none" />
 				</div>
 
 				<div class="span11">
