--- a/seapal_play2.1/app/views/route.scala.html
+++ b/seapal_play2.1/app/views/route.scala.html
@@ -28,7 +28,7 @@
 			<div id="appWrapper" align="center">
 				<div class="row-fluid">
 					<div class="span1">
-						<input class="btn" type="button" id="load_route" value="Route laden" class="button" />
+						<input class="btn" type="button" id="load_route" value="Route" class="button" />
 					</div>
 				
 					<div class="span11">
