--- a/seapal_play2.1/app/views/_include/header_app_route.scala.html
+++ b/seapal_play2.1/app/views/_include/header_app_route.scala.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/logbook_selection_menu.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/map.css")">
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/contextMenu.css")">
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/app/route.css")">
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCnaCuuuXCzfGbzbXN699vudQ4fWTNmiY&libraries=geometry&sensor=false"></script>
 <script src="@routes.Assets.at("javascripts/app/route/route_menu.js")" type="text/javascript"></script>
