--- a/seapal_play2.1/public/stylesheets/app/map.css
+++ b/seapal_play2.1/public/stylesheets/app/map.css
@@ -91,6 +91,10 @@ label {
     margin-left: 7px;
 }
 
+#deleteRouteButton, #saveRouteButton, #stopRouteButton {
+	width: 100px;
+}
+
 /* weather overlay */
 #weatherMode_choices {
     padding: 5px 5px 5px 5px;
