--- a/seapal_play2.1/app/views/_include/logbookInc/logbook_tripinfo.scala.html
+++ b/seapal_play2.1/app/views/_include/logbookInc/logbook_tripinfo.scala.html
@@ -51,13 +51,13 @@
 						<div class="span3">
 							<div class="control-group">
 								<label class="control-label">Motor</label> <input type="text"
-									name="motor" id="motor" class="input-medium" />
+									class="input-medium" name="motor" id="motor" />
 							</div>
 							<div class="control-group">
 								<label class="control-label"></label> <span>Tank
 									gef&uuml;llt<input type="checkbox" value="false" name="tank"
-									id="tank" style="margin-left: 20px; margin-top: -5px;"
-									class="input-medium" />
+									class="input-medium" id="tank" style="margin-left: 20px;
+									margin-top: -5px;"/>
 								</span>
 							</div>
 						</div>
