--- a/seapal_play2.1/app/views/_include/mapInc/weather_chart.scala.html
+++ b/seapal_play2.1/app/views/_include/mapInc/weather_chart.scala.html
@@ -38,5 +38,16 @@
 		</div>
 		
 	</div>
+	
+	<div class="row-fluid" id="foreCastContainer">
+		<div class="btn-group">
+			<button class="btn" id="btnAkt">Aktuell</button>
+			<button class="btn" id="btn3h">3h</button>
+			<button class="btn" id="btn6h">6h</button>
+			<button class="btn" id="btn1D">1 Tag</button>
+			<button class="btn" id="btn2D">2 Tage</button>
+			<button class="btn" id="btn5D">5 Tage</button>
+		</div>
+	</div>
 
 </div>
