has to be ready now ;-)

--- a/seapal_play2.1/app/views/_include/routeInc/route_menu.scala.html
+++ b/seapal_play2.1/app/views/_include/routeInc/route_menu.scala.html
@@ -11,10 +11,8 @@
 			<thead>
 				<tr>
 					<th>Title</th>
-					<th>Skipper</th>
 					<th>Start</th>
-					<th>Ende</th>
-					<th>Dauer</th>
+					<th>Ziel</th>
 					<th></th>
 				</tr>
 			</thead>
